--- a/index.html
+++ b/index.html
@@ -18,14 +18,13 @@
 
 <body>
   <main class="container">
-    <div>
-      <img class="img-principal" src="./images/image-product-desktop.jpg" width="300" height="450"
-        alt="Gabrielle perfume bottle for the house of CHANEL">
-      <img class="img-alternative" src="./images/image-product-mobile.jpg" width="355" height="249"
-        alt="Gabrielle perfume bottle for the house of CHANEL">
-    </div>
+    <picture>
+      <source media="(min-width: 600px)" srcset="images/image-product-desktop.jpg" />
+      <img class="img-alternative" src="./images/image-product-mobile.jpg"
+        alt="Photo of a bottle of Gabrielle essence perfume">
+    </picture>
     <div class="card-main">
-      <h2 class="subtitulo">Perfume</h2>
+      <span class="subtitulo">Perfume</span>
       <h1>Gabrielle Essence Eau De Parfum</h1>
       <p>
         A floral, solar and voluptuous interpretation composed by Olivier Polge,
@@ -33,10 +32,10 @@
       </p>
       <div class="card-price">
         <span class="price">$149.99</span>
-        <span class="price-promo">$169.99</span>
+        <del class="price-promo"><span class="sr-only">Previous price</span>$169.99</del>
       </div>
       <div>
-        <button class="btn" type="submit"><img class="cart-icon" src="./images/icon-cart.svg" width="15" height="16"
+        <button class="btn"><img class="cart-icon" src="./images/icon-cart.svg" width="15" height="16"
             alt="Cart icon"> Add to
           Cart</button>
       </div>
